ajuste do projeto

--- a/index.html
+++ b/index.html
@@ -72,6 +72,23 @@
         </section>
      </main>
     
-    <footer></footer>
+    <footer class="rodape">
+        <h1 class="rodape_titulo">Garantido por desenvolvedores de mais de 80 países</h1>
+        
+        <section class="rodape_dados">
+            <div>
+                <h1>100%</h1>
+                <p>Satisfação</p>
+            </div>
+            <div>
+                <h1>120k</h1>
+                <p>Usuarios Felizies</p>
+            </div>
+            <div>
+                <h1>125k+</h1>
+                <p>Downloads</p>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
