--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section class="cabecalho2"> 
             <div class="cabecalho_div">          
                 <h1 class="cabecalho2_titulo">Um Poderoso APP Para Seu Negócio.</h1>
-                <h3 class="cabecalho2_subtitulo">De código aberto a serviços profissionais, nosso sistema ajuda você a criar, implantar, testar e monitorar aplicativos.o</h3>
+                <p class="cabecalho2_subtitulo">De código aberto a serviços profissionais, nosso sistema ajuda você a criar, implantar, testar e monitorar aplicativos</p>
                 <div class="cabecalho2_botao">  
                     <button class="botao1" type="button">App Store</button> 
                     <button class="botao2" type="button">Google Play</button>
