--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <h1 class="cabecalho2_titulo">Um Poderoso APP Para Seu Negócio.</h1>
                 <p class="cabecalho2_subtitulo">De código aberto a serviços profissionais, nosso sistema ajuda você a criar, implantar, testar e monitorar aplicativos</p>
                 <div class="cabecalho2_botao">  
-                    <button class="botao1" type="button">App Store</button> 
-                    <button class="botao2" type="button">Google Play</button>
+                    <a href="https://www.apple.com/br/app-store/"><button class="botao1" type="button">App Store</button></a>
+                    <a href="https://play.google.com/store/games?hl=pt_BR&gl=US"><button class="botao2" type="button">Google Play</button></a>
                 </div>
             </div>
 
